--- a/app/views/registration/new.html.erb
+++ b/app/views/registration/new.html.erb
@@ -1,7 +1,15 @@
 <h1>Sign Up</h1>
 
 <div class="mt-5">
-	<%= form_with model: @user, url: signup_path do |form| %>
+	<%= form_with model: @user, url: signup_path, local: true do |form| %>
+		<% if @user.errors.any? %>
+			<div class="alert alert-danger">
+				<% @user.errors.full_messages.each do |message| %>
+					<div><%= message %></div>
+				<% end %>
+			</div>
+		<% end %>
+
 		<div class="mb-3">
 			<%= form.label :email, class: "form-label" %>
 			<%= form.text_field :email, placeholder: "john.doe@email.com", class: "form-control" %>
